--- a/CabinLogInternal/package.json
+++ b/CabinLogInternal/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.3.3",
+    "react-router-dom": "^6.25.1",
+    "styled-components": "^6.1.12",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
     "vite-plugin-eslint": "^1.8.1"
