--- a/CabinLogInternal/package.json
+++ b/CabinLogInternal/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "prettier": "^3.3.3",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
     "styled-components": "^6.1.12",
     "typescript": "^5.2.2",
