adding auth endpoints for login and signup

--- a/CabinLogsApi/appsettings.json
+++ b/CabinLogsApi/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "Issuer": "CabinLogs",
+    "Audience": "CabinLogsUsers",
+    "SigningKey": "gqYc#yYbTSN*ErFupzFdneejW8T^#^!RdXbB6h^QFnkLz%8p44"
+  }
 }
