--- a/CabinLogInternal/package.json
+++ b/CabinLogInternal/package.json
@@ -27,6 +27,7 @@
     "@typescript-eslint/eslint-plugin": "^7.16.1",
     "@typescript-eslint/parser": "^7.16.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "date-fns": "^3.6.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -37,6 +38,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
+    "recharts": "^2.12.7",
     "styled-components": "^6.1.12",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
