--- a/CabinLogInternal/package.json
+++ b/CabinLogInternal/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
+    "react-error-boundary": "^4.0.13",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.25.1",
