Update main_cabinlogs.yml for backend

--- a/.github/workflows/main_cabinlogs.yml
+++ b/.github/workflows/main_cabinlogs.yml
@@ -1,8 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - CabinLogs
-
+name: Backend
 on:
   push:
     branches:
@@ -20,6 +19,8 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
+      - name: Navigate to Backend
+        run: cd CabinLogsApi
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
@@ -61,5 +62,5 @@ jobs:
         with:
           app-name: 'CabinLogs'
           slot-name: 'Production'
-          package: .
+          package: ${{env.DOTNET_ROOT}}/myapp
           
