--- a/.github/workflows/main_cabinlogs.yml
+++ b/.github/workflows/main_cabinlogs.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Backend
 on:
   push:
@@ -19,14 +16,14 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.x'
-      - name: Navigate to Backend
-        run: cd CabinLogsApi
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build --configuration Release --output ${{env.DOTNET_ROOT}}/myapp
+        working-directory: CabinLogsApi
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        working-directory: CabinLogsApi
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -41,7 +38,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write
 
     steps:
       - name: Download artifact from build job
@@ -63,4 +60,3 @@ jobs:
           app-name: 'CabinLogs'
           slot-name: 'Production'
           package: .
-          
