--- a/.github/workflows/main_cabinlogs.yml
+++ b/.github/workflows/main_cabinlogs.yml
@@ -18,18 +18,18 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release --output ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet build --configuration Release
         working-directory: CabinLogsApi
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ./output
         working-directory: CabinLogsApi
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: CabinLogsApi/output
 
   deploy:
     runs-on: windows-latest
